static/css/style.css
/* colours 
E0FBFC - Light Cyan - Highlight
C2DFE3 - Light Blue - Positive Button
9DB4C0 - Cadet Gray - Negative Button
5c6B73 - Payne's Gray - Lowlight
011502 - NIght - Background
*/
@font-face {
    font-family: 'Mandatory';
    src: url('/static/fonts/Mandatory.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

* {
    color: #E0FBFC;
    font-family: Arial, Helvetica, sans-serif;
}

a {
    text-decoration: none;
    color: #E0FBFC;
}

body {
    background-color: #011502;
    width: 100vw;
    height: 100vh;
    padding: 0;
    margin: 0;
    background-image: url("../images/pexels-maltelu-2244746.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    overflow: hidden;
}

/* Whole heading/nav bar */
#nav-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #5C6B73;
    border: 2px solid #9DB4C0;
    align-items: center;
}

#link-home {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

nav {
    max-height: fit-content;
}

nav ul {
    display: flex;
    flex-direction: row;
    padding-right: 12px;
    margin-bottom: 0;
}

nav ul li {
    list-style-type: none;
    padding: 12px;
    font-size: 18px;
}

.offcanvas-body, .offcanvas-header {
    background-color: #9DB4C0;
    color: #5c6B73;
}

.offcanvas-body nav ul {
    display: flex;
    flex-direction: column;
}

#title-spanner {
    font-size: 75px;
}

#title-container, #profile-form-container {
    display: flex;
    flex-direction: row;
}

#title-container h1 {
    margin-bottom: 0;
}

/* Label and field */
#profile-form div {
    display: flex;
    flex-direction: column;
}

#block-content {
    max-height: 90vh;
    overflow: auto;
}

.block {
    margin: 32px;
    padding:  24px;
    border: 2px solid #9DB4C0;
    background-color: #5c6b73bb;
    height: 80vh;
    flex: 1; 
    overflow: auto;
}

::-webkit-scrollbar {
    width: 12px;
}
  
::-webkit-scrollbar-track {
    background: transparent;
}
  
::-webkit-scrollbar-thumb {
    background-color: #9DB4C0; 
}
  
.block::-webkit-scrollbar-thumb:hover {
    background-color: #9DB4C0;
}

.double-block {
    display: flex;
    flex-direction: row;
    width: 100%;
}

#welcome-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#welcome {
    max-width: 650px;
}

#hamburger-button {
    display: none;
    width: 75px;
    height: 75px;
    background-color: #9DB4C0;
    border-radius: 0;
    border: none;
    color: #E0FBFC;

}

@media (max-width: 766px) {
    .double-block {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #hamburger-button {
        display: inline;
    }

    #desktop-nav {
        display: hidden;
    }
}

.vehicle-list-item, .vehicle-list-item-last, .booking-list-item, .booking-list-item-last, .all-booking-list-item {
    width: 100%;
    border: 2px solid #9DB4C0;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

/* Form */

input, select, textarea {
    color: black; 
}

#bookings-list {
    display: flex;
    flex-direction: column;
}



.vrn {
    background-color: #ffd800;
    
    border: 1px solid black;
    border-radius: 5px;
    color: black;
    
    font-family: 'Mandatory', sans-serif;
    
    /* for use in form-input */
    text-align: center !important;
    text-transform: uppercase; 

    /* Size/Aspect/Dimensions */
    aspect-ratio: 520 / 111;

    padding: 5px
}

.vrn-list {
    padding: 5px 12px;
    letter-spacing: 1px;
    font-size: 32px;
    font-size: 2rem;
    letter-spacing: 2px;
    font-weight: bold;
}

.electric-list {
    border-left: 5px solid green;
    padding-left: 0;
}

.vrn-med {
    font-size: 50px;
    font-weight: 600;
}

.electric-med {
    border-left: 15px solid green;
    padding-left: 0;
}


form input {
    color: black;
}

form button, button {
    color: black;
}

#error {
    color: red;
}

#left-block-inner {
    padding: 12px;
}

input {
    color: black;
}

.toast {
    position: fixed;
    bottom: 2rem;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1055;
}

.toast * {
    color: black;
}

.modal * {
    color: black;
}

/* Labels for displaying bookings and vehicles */
.label {
    background-color: #5c6B73;
    opacity: 50%;
}

.booking-type-logo {
    max-width: 36px;
    max-height: 36px;
    aspect-ratio: 1:1;
}

